Tue Feb 25 22:52:02 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/dl/dl.c (rb_dl_realloc): use NUM2SIZET instead of NUM2INT.

	* ext/fiddle/fiddle.c (rb_fiddle_realloc): ditto.

Tue Feb 25 22:49:30 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/dl/dl.c (rb_dl_malloc): use NUM2SIZET instead of NUM2INT.
	  Coverity Scan found this bug.

	* ext/fiddle/fiddle.c (rb_fiddle_malloc): ditto.

Tue Feb 25 12:06:13 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/Makefile.sub: define PACKED_STRUCT.

Mon Feb 24 21:41:56 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* README.md, README.ja.md: removed (wrong) mode setting for emacs.

Mon Feb 24 20:05:41 2014  Eric Wong  <e@80x24.org>

	* configure.in: define PACKED_STRUCT_UNALIGNED for x86*
	* timev.h (struct vtm): use PACKED_STRUCT_UNALIGNED
	* time.c (struct time_object): ditto
	  [Bug #9558] non-x86 cannot safely access unaligned addresses

Mon Feb 24 18:10:02 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/fiddle/test_function.rb: remove unused variables.
	* test/fileutils/test_fileutils.rb: ditto.
	* test/io/console/test_io_console.rb: ditto.

Mon Feb 24 12:37:51 2014  Eric Wong  <e@80x24.org>

	* configure.in: use -Wno-packed-bitfield-compat for GCC 4.4+
	  use __attribute__((packed)) if available
	* timev.h: shrink and pack struct vtm
	* time.c: pack struct time_object and adjust/introduce helpers
	  [ruby-core:60794]

Sun Feb 23 17:55:50 2014  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/xmltokens.rb: Add missing non ASCII valid characters
	  to element name characters. Now, REXML name tokens exactly
	  match "[5] Name" in the XML spec and "[4] NCName" in the
	  Namespaces in XML spec. See comment about the details.
	  [Bug #9539]  [ruby-core:60901]
	  Reported by Mario Barcala. Thanks!!!

	* test/rexml/xpath/test_node.rb: Add tests for the above case.

Sun Feb 23 12:18:54 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/raddrinfo.c (inet_pton): use rb_w32_inet_pton, instead of