@@ -1,3 +1,8 @@
+Wed Feb 26 01:29:27 2014  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* string.c (sym_find): Add Symbol.find(str), which returns whether given
+	  string is defined as symbol or not. [Feature #7854]
+
 Tue Feb 25 22:52:02 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* ext/dl/dl.c (rb_dl_realloc): use NUM2SIZET instead of NUM2INT.
